--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,33 @@
 .table-buttons form{
     display: contents;
 }
+/*.page-item.active .page-link {*/
+/*    z-index: 3;*/
+/*    color: #fff;!important;*/
+/*    background-color: #2E937A;!important;*/
+/*    border-color: #007bff;!important;*/
+/*}*/
+
+.page-link {
+    position: relative;
+    display: block;
+    padding: 0.5rem 0.75rem;
+    margin-left: -1px;
+    line-height: 1.25;
+    color: green!important;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+}
+.page-item.active .page-link {
+    z-index: 3;
+    color: #fff!important;
+    background-color: green!important;
+    border-color:  green!important;
+}
+.page-link:hover {
+    z-index: 2;
+    color: green!important;
+    text-decoration: none;
+    background-color: #e9ecef;
+    border-color: #dee2e6;
+}
